// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) Button should render snapshot correctly 1`] = `
<Button
  className="my-class"
  disabled={true}
  icon="tutti-cube"
  iconAfter="test-ico"
  level="primary"
  loading={false}
  rounded={true}
  size="large"
>
  <button
    className="my-class"
    disabled={true}
    icon="tutti-cube"
    iconAfter="test-ico"
    type="submit"
  >
    Test content
  </button>
</Button>
`;

exports[`(Component) Button should render snapshot correctly 2`] = `
<Button
  className="my-class"
  disabled={true}
  icon="tutti-cube"
  iconAfter="test-ico"
  level="primary"
  loading={true}
  rounded={true}
  size="large"
  type="button"
>
  <button
    className="my-class undefined"
    disabled={true}
    icon="tutti-cube"
    iconAfter="test-ico"
    type="button"
  >
    <Spinner
      color="light"
      key="spinner"
      size={1.25}
    >
      <div
        className=""
      >
        <div
          style={
            Object {
              "borderBottom": "0.125rem solid rgba(255, 255, 255, 0.6)",
              "borderLeft": "0.125rem solid rgba(255, 255, 255, 0.8)",
              "borderRight": "0.125rem solid rgba(255, 255, 255, 0.6)",
              "borderTop": "0.125rem solid rgba(255, 255, 255, 0.6)",
              "height": "1.25rem",
              "width": "1.25rem",
            }
          }
        />
      </div>
    </Spinner>
  </button>
</Button>
`;
